# PhotorealisticRendering

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml
docs/: _config.yml  explore.md  index.md  mainpage.md  scene.md
docs/html/: annotated.html  camera_8h_source.html  classHdrImage-members.html  classHdrImage.html  classPCG-members.html  classPCG.html  classes.html  colors_8h_source.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_289a9db7f5db18fcebe2284c66b05f94.html  dir_3e4011b093e9094a5bbfad1e0d15235b.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_8h_source.html  functions_func.html  geometry_8h_source.html  hdrimage_8h_source.html  hierarchy.html  imagetracer_8h_source.html  index.html  lights_8h_source.html  materials_8h_source.html  md_LICENSE.html  md_README.html  md_docs_index.html  md_docs_scene.html  menudata.js  pages.html  pcg_8h_source.html  ray_8h_source.html  render_8h_source.html  scene_8h_source.html  shapes_8h_source.html  structBRDF-members.html  structBRDF.html  (+78 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_10.js  (+19 more)
examples/: generate-animation.sh  generate-image.sh
examples/demo/: generate-image.sh  image000.pfm  image001.pfm  image002.pfm  image003.pfm  image004.pfm  image005.pfm  image006.pfm  image007.pfm  image008.pfm  image009.pfm  image010.pfm  image011.pfm  image012.pfm  image013.pfm  image014.pfm  image015.pfm  image016.pfm  image017.pfm  image018.pfm  image019.pfm  image020.pfm  image021.pfm  image022.pfm  image023.pfm  image024.pfm  image025.pfm  image026.pfm  image027.pfm  image028.pfm  image029.pfm  image030.pfm  image031.pfm  image032.pfm  image033.pfm  image034.pfm  image035.pfm  image036.pfm  image037.pfm  image038.pfm  (+321 more)
examples/hdr2ldr/: chess.pfm  mountains.pfm  sand.pfm  stars.pfm  sunset.pfm  wood.pfm
examples/hdr2ldr/solar_system/: mars.pfm  mercury.pfm  neptune.pfm  sun.pfm  uranus.pfm  venus.pfm
examples/render/: chess.txt  cornell_box.sh  cornell_box.txt  demo.txt  demo_image.txt  demo_pointlight.txt  fireflies.txt  generate-animation.sh  generate-image.sh  image.txt  parallelize-image.sh  pointlight.txt  solar_system.txt  sunset.txt
html/: camera_8h_source.html  classPCG-members.html  classPCG.html  dir_3e4011b093e9094a5bbfad1e0d15235b.html  dir_63772b626f2709090f0bdca0f40827b4.html  md_CHANGELOG.html  shapes_8h_source.html  structColor.html  structGrammarError-members.html  structGrammarError.html  structHitRecord-members.html  structImageTracer.html  structInputStream.html  structInvalidPfmFileFormat-members.html  structInvalidPfmFileFormat.html  structMaterial.html  structNormal.html  structOrthogonalCamera-members.html  structOrthogonalCamera.html  structPathTracer-members.html  structPigment.html  structPlane.html  structRenderer.html  structShape-members.html  structSpecularBRDF-members.html  structToken-members.html  structTransformation-members.html  structUniformPigment-members.html  structWorld.html
html/search/: all_12.js  all_13.js  all_6.js  all_9.js  all_a.js  classes_10.js  classes_6.js  classes_8.js  classes_d.js  functions_0.js  functions_2.js  functions_3.js  functions_e.js
include/: camera.h  colors.h  functions.h  geometry.h  hdrimage.h  hitrecord.h  imagetracer.h  lights.h  materials.h  pcg.h  ray.h  render.h  scene.h  shapes.h  transformation.h  world.h  write_float.h
src/: colors.cpp  hdrimage.cpp  materials.cpp  raytracer.cpp  scene.cpp  shapes.cpp  transformation.cpp
test/: camera.cpp  colors.cpp  colors2.cpp  geometry.cpp  hdrimage.cpp  imagetracer.cpp  materials.cpp  pcg.cpp  ray.cpp  render.cpp  scene.cpp  shapes.cpp  transformation.cpp  world.cpp
